force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Appraisal_Status__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Status__c</fullName>
    <inlineHelpText>This field is updated automatically as the Appraisal Order proceeds through the intended process.</inlineHelpText>
    <label>Appraisal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Ordered / In Progress</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>