force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Appraisal_Type__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Type__c</fullName>
    <label>Appraisal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Evaluation Only</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>