force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Collateral_Management__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Management</label>
    <referenceTo>LLC_BI__Collateral__c</referenceTo>
    <relationshipLabel>Third Party Reports</relationshipLabel>
    <relationshipName>Third_Party_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>