force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Licensed_Appraiser_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Appraiser_Allowed__c</fullName>
    <label>Licensed Appraiser Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Complex 1-4 Family Residential &lt; $1MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>