force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__EPA_Vendor__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__EPA_Vendor__c</fullName>
    <description>This picklist is optional and manually selected when entering third party report detail about an EPA Assessment. It is a list of vendors to have 3rd part reports ordered for when EPA Assessment Type is selected (helps run 3rd party reports ordering)</description>
    <label>EPA Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__EPA_Assessment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AEI</fullName>
            </value>
            <value>
                <fullName>PES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>