force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <description>This field specifies the ordered Third Party Report&apos;s associated Loan.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Third Party Reports</relationshipLabel>
    <relationshipName>Third_Party_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>