force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Order_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Order_Type__c</fullName>
    <description>This field specifies the Type of Third Party Report. Field values can be used to trigger workflow which updates the Record Type and corresponding Page Layout.</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>As Is</fullName>
            </value>
            <value>
                <fullName>As Built</fullName>
            </value>
            <value>
                <fullName>As Constructed</fullName>
            </value>
            <value>
                <fullName>EPA Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>