force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Property_Address__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Property_Address__c</fullName>
    <description>This field is optional and specifies the subject property&apos;s address. It is manually populated.</description>
    <label>Property Address</label>
    <type>TextArea</type>
</CustomField>