force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Property_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Property_Status__c</fullName>
    <description>This field is optional and specifies the subject property&apos;s status (Land Only, Improved, Under Construction, etc.). It is manually populated.</description>
    <label>Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Land Only</fullName>
            </value>
            <value>
                <fullName>Improved</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>