force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Property_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Property_Type__c</fullName>
    <description>This field is optional and specifies the subject property&apos;s Type (Raw Land, Land and Building, etc.) It is manually populated.</description>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Raw Land</fullName>
            </value>
            <value>
                <fullName>Land and Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>