force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Report_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Report_Due_Date__c</fullName>
    <description>This field is optional and specifies the Date that the Third Party Report is expected to be completed by the vendor. It is manually populated.</description>
    <label>Report Due Date</label>
    <type>Date</type>
</CustomField>