force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Report_Ordered__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Report_Ordered__c</fullName>
    <description>This field is optional and specifies the date of the vendor&apos;s order of the Third Party Report. It can be different than the date that the Third Party Report was created in nCino.  It is manually populated.</description>
    <label>Report Ordered</label>
    <type>Date</type>
</CustomField>