force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Report_Rcvd__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Report_Rcvd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and specifies the Date that the Third Party Report was received from the vendor. It is manually populated.</description>
    <label>Report Rcvd</label>
    <type>Checkbox</type>
</CustomField>