force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Report_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Report_Type__c</fullName>
    <description>This field is optional and specifies the type of Third Party Report (Tax Verification, CRE Appraisal, EPA Assessment, Business Valuation, Residential Property Appraisal, Investment Property Appraisal, Equipment Appraisal, etc.). It is manually populated.</description>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tax Verification</fullName>
            </value>
            <value>
                <fullName>CRE Appraisal</fullName>
            </value>
            <value>
                <fullName>EPA Assessment</fullName>
            </value>
            <value>
                <fullName>Business Valuation</fullName>
            </value>
            <value>
                <fullName>Residential Property Appraisal</fullName>
            </value>
            <value>
                <fullName>Investment Property Appraisal</fullName>
            </value>
            <value>
                <fullName>Equipment Appraisal</fullName>
            </value>
            <value>
                <fullName>Self-Contained</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>