force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Site_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Site_Contact_Phone__c</fullName>
    <label>Site Contact Phone</label>
    <type>Phone</type>
</CustomField>