force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Third Party Reports</relationshipLabel>
    <relationshipName>Third_Party_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>