force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Requested_Approaches__c.field-meta.xml
<CustomField>
    <fullName>Requested_Approaches__c</fullName>
    <label>Requested Approaches</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Market Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>