force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Requested_Values__c.field-meta.xml
<CustomField>
    <fullName>Requested_Values__c</fullName>
    <label>Requested Values</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Market Value As Is</fullName>
            </value>
            <value>
                <fullName>Market Value At Stabilization</fullName>
            </value>
            <value>
                <fullName>Market Value At Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>